security/05-network-policies/01-default-deny/backend.yml
apiVersion: v1
kind: Pod

metadata:
  name: backend
  labels:
    app: backend

spec:
  containers:
  - name: nginx
    image: nginx
