security/05-network-policies/01-default-deny/frontend.yml
apiVersion: v1
kind: Pod

metadata:
  name: frontend
  labels:
    app: frontend

spec:
  containers:
  - name: nginx
    image: nginx
