security/05-network-policies/01-default-deny/default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny

spec:
  podSelector: {}

  policyTypes:
  - Ingress
